force-app/main/default/objects/wkdw__TicketCategoryDefinition__mdt/wkdw__TicketCategoryDefinition__mdt.object-meta.xml
<CustomObject>
    <description>Defines the type of tickets when more than one is available. By default, only one ticket category is available in Employee Concierge, but additional categories can be created in the org.</description>
    <label>Ticket Category Definition</label>
    <pluralLabel>Ticket Category Definitions</pluralLabel>
</CustomObject>