force-app/main/default/objects/wkdw__TicketCategoryDefinition__mdt/fields/wkdw__AssociatedKnowledgeArticleTypeMapping__c.field-meta.xml
<CustomField>
    <fullName>wkdw__AssociatedKnowledgeArticleTypeMapping__c</fullName>
    <description>A comma-separated list of knowledge article record types that map to the associated ticket category.</description>
    <inlineHelpText>Enter all knowledge article record types associated with the ticket category.</inlineHelpText>
    <label>AssociatedKnowledgeArticleTypeMapping</label>
    <type>TextArea</type>
</CustomField>