force-app/main/default/objects/wkdw__TicketCategoryDefinition__mdt/fields/wkdw__IsActive__c.field-meta.xml
<CustomField>
    <fullName>wkdw__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this ticket category is active or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>