force-app/main/default/objects/wkdw__TicketCategoryDefinition__mdt/fields/wkdw__Name__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Name__c</fullName>
    <description>The unique name of the individual ticket category. The values for this field must match the API name values in the ticket category picklist field (TicketCategory__c on the Case object).</description>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>