force-app/main/default/objects/wkdw__TicketCategoryDefinition__mdt/fields/wkdw__QuickAction__c.field-meta.xml
<CustomField>
    <fullName>wkdw__QuickAction__c</fullName>
    <description>The set of fields associated with the ticket category. Available on the new ticket form when the related ticket category is selected.
        
        Specify the full API name of the quick action, including the org namespace prefix (if exists) and the object api name.</description>
    <label>Quick Action Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>